# fadecandy

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  code_of_conduct.md
bootloader/: .gitignore  Makefile  README.md  bootloader.c  bootloader.cpp  dfu.c  dfu.h  mk20dx128.c  mk20dx128.h  mk20dx128.ld  openocd.cfg  serial.c  serial.h  usb_desc.c  usb_desc.h  usb_dev.c  usb_dev.h
doc/: fc_protocol_opc.md  fc_protocol_usb.md  fc_protocol_websocket.md  fc_server_config.md  processing_opc_client.md  teensy_pins_out_number
doc/images/: controller-internals-diagram.graffle  host-internals-diagram.graffle
doc/images/system-diagram-1.graffle/: data.plist
doc/images/system-diagram-2.graffle/: data.plist
examples/: README.md  color-correction-ui.py  config-basic.json  config-minimal.json  usb-basic.py
examples/Processing/clouds/: OPC.pde
examples/Processing/dot/: OPC.pde  dot.pde
examples/Processing/mapper2d/: mapper2d.pde
examples/Processing/sequencer/: OPC.pde  sequencer.pde
examples/Processing/text/: text.pde
examples/Processing/waves/: waves.pde
examples/config/: bgr.json  default.json  fcserver-debian.init.d  multi-device.json  piment-noir.json  ps-watcher.conf  ps-watcher.default
examples/cpp/: .gitignore  Makefile  dot.cpp  dot.h  looper.cpp  mixer.cpp  particle_trail.cpp  particle_trail.h  rings.cpp  rings.h  rings_2d.cpp  simple.cpp  spokes.cpp  spokes.h
examples/cpp/lib/: README.md  brightness.h  color.h  effect.cpp  effect.h  effect_mixer.h  effect_runner.h  noise.h  opcclient.cpp  opcclient.h  particle.h  picopng.h  texture.h
examples/csharp/: OpenPixelControl.sln
examples/csharp/OpenPixelControl/: Client.cs  ColorUtils.cs  OpenPixelControl.xproj  PixelStrip.cs  Program.cs  project.json
examples/go/: scrollserver.go
examples/go/static/: index.html
examples/html/: 24x8z_dots.html  README.md  chase.html  dots.html  ganzfeld.html  grid24x8z_dots.html  grid24x8z_dots_leapmotion.html  grid8x8_dots-relay.html  mouse.html  random-color-pixel-strip.html
examples/java/: README.md  build.xml
examples/layouts/: create_grid32x16z.js  create_grid8x8.js  create_ring24.js  create_strip64.js  create_triangle16.js  create_window6x12.js  grid32x16z.json  grid8x8.json  ring24.json  strip64.json  triangle16.json  window6x12.json
examples/light-diffusers/grid8x8/: mount.stl
examples/node/: README.md  midi_particles.coffee  opc.js  package.json  particle_lifecycle.js  particle_touchosc.js  particle_trail.js  rings.js  strip_redblue.js
examples/p5js/: grid24x8_clouds.html  grid8x8_dot.html  grid8x8_noise_simple.html  grid8x8_orbits.html  strip64_flames.html
examples/p5js/libraries/: opc.js
examples/perl/: OPC.pm  automaton.pl  blocks.pl  chaser.pl  gameoflife.pl  mandelbrot.pl  multitomaton.pl  random.pl  turnthemoff.pl  waves.pl
examples/processing/: README.md
examples/processing/dot/: dot.pde
examples/python/: README.md  burnin.py  chase.py  crosstalk-test.py  measuring-stick.py  opc.py  solid-white.py  usb-lowlevel.py
examples/systemd/: README.md  example-leds.service  fadecandy.service
fc_firmware/: fc_firmware.ino  hcolor.h
firmware/: .gitignore  HardwareSerial.h  Makefile  OctoWS2811.h  OctoWS2811z.cpp  OctoWS2811z.h  WProgram.h  analog.c  arm_math.h  benchmark.py  core_pins.h  fadecandy.cpp  fadecandy.hex  fc_defs.h  fc_draw.cpp  fc_pixel.cpp  fc_pixel_lut.cpp  fc_usb.cpp  fc_usb.h  fcb-app.ld  fcb256-app.ld  hcolor.h  main.cpp  mk20dx128.h  nonstd.c  pins_arduino.h  pins_teensy.c  serial1.c  startup.c  usb_desc.c  usb_desc.h  usb_dev.c  usb_dev.h  usb_mem.c  usb_mem.h  usb_names.h  wiring.h  yield.c
firmware/src/: hcolor.h  main.cpp
firmware/teensy3/: eeprom.c
firmware/wiring-diagram.graffle/: data.plist
pcb/: README.md
pcb/fc64x8/: .gitignore  adafruit.dru  eagle.epf  fc64x8-bom.csv  fc64x8-bom.xls  fc64x8.brd  fc64x8.pro  fc64x8.sch  gerb274x.cam  layers.txt
pcb/rgb123/: Fadecandy_G.pdsprj
pcb/testjig/: Fadecandy_E - CADCAM Bottom Copper.GBL  Fadecandy_E - CADCAM Bottom Silk Screen.GBO  Fadecandy_E - CADCAM Bottom Solder Resist.GBS  Fadecandy_E - CADCAM Drill.XLN  Fadecandy_E - CADCAM Mechanical 3.GKO  Fadecandy_E - CADCAM Top Copper.GTL  Fadecandy_E - CADCAM Top Silk Screen.GTO  Fadecandy_E - CADCAM Top Solder Resist.GTS  Fadecandy_E.pdsprj
server/: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  enttecdmxdevice.cpp  enttecdmxdevice.h  fcdevice.cpp  fcdevice.h  fcserver-osx  fcserver.cpp  fcserver.h  foo.html  libusbev.cpp  libusbev.h  main.cpp  opcsink.cpp  opcsink.h  usbdevice.cpp  usbdevice.h  util.h
server/cmake/: fcserver-user.service.in  fcserver.service.in
server/cmake/debian/: postinst.in
server/http/: 404.html  index.html  manifest.py
server/http/css/: narrow.css
server/http/js/: home.js
server/libev/: ev.c  ev_poll.c
server/src/: apa102spidevice.cpp  apa102spidevice.h  config.h  enttecdmxdevice.cpp  enttecdmxdevice.h  fcdevice.cpp  fcdevice.h  fcserver.cpp  fcserver.h  libusbev.cpp  libusbev.h  main.cpp  netserver.cpp  netserver.h  opc.h  opcsink.cpp  opcsink.h  spidevice.cpp  spidevice.h  tcpnetserver.cpp  tcpnetserver.h  tinythread.cpp  usbdevice.cpp  usbdevice.h  util.h
server/vsbuild/vs2017_linux_raspberrypi/: server_vs2017_linux_raspberrypi.sln  server_vs2017_linux_raspberrypi.vcxproj  server_vs2017_linux_raspberrypi.vcxproj.filters
src/: hcolor.h  main.cpp
teensy3/: Makefile  avr_emulation.h
testjig/: README.md  firmwareprep.py
testjig/production/: arm_debug.cpp  arm_debug.h  arm_kinetis_debug.cpp  arm_kinetis_debug.h  arm_kinetis_reg.h  electrical_test.cpp  electrical_test.h  fc_remote.cpp  fc_remote.h  firmware_data.h  libswd.h  libswd_bin.c  libswd_bitgen.c  libswd_bus.c  libswd_cmd.c  libswd_cmdq.c  libswd_core.c  libswd_dap.c  libswd_drv.c  libswd_error.c  libswd_log.c  production.ino  testjig.h
testjig/serial_passthrough/: serial_passthrough.ino
tools/: benchmark.py  chase.py  color-correction-ui.py  crosstalk-test.py  every-other-white.py  firmware-config-ui.py  strobe.py  teensy-bootloader-mode.py
tools/measuring_stick/: measuring_stick.ino
(+113 files in other folders)
